--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Rauner lucas A. A.">
     <meta name="description" content="Site referente a disciplina de b.web">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem é RAUNER</title>    
     <link rel="stylesheet" href="jeitinho.css" type="text/css" media="screen">
+    
 </head>
 <nav>
     <!--
