--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <article class="container">
         <section class="card" id="quem sou">
             <h1 class="cont">Quem sou eu?</h1>
-            <img src="https://raw.githubusercontent.com/RAUNER25/prog_Basic_Web/main/raunerImag200x200.jpg" alt="RaunerImagem" class="imagem">
+            <img src="" alt="RaunerImagem" class="imagem">
             <p>Prazer, sou <b>Rauner</b>, ou melhor <I>Rauner Lucas Alves Amaral</I>, o mundo teve a dádiva de me receber no dia 25.12.2002; Atualmente tenho 19 anos;
                 Sou um aspirante a Analista de Softwares; Iniciei meu curso de formação em Sistemas para internet no ano de 2022/1, no vulgo IFTO; <br>
                 Busco um dia se um Full Stack e estar liderando uma equipe de desenvolvedores atualmente não tenho muito conhecimento na área,<br>
