--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </ul>
     -->
 </nav>
-<body>
+<script src="tiratem.js"> </script>
+<body onload="load()">
     <article class="container">
         <section class="card" id="quem sou">
             <h1 class="cont">Quem sou eu?</h1>
@@ -130,6 +131,15 @@
                 </table>
             </p>
         </section>
+        <section class="card" id="Contato">
+            <h3 class="cont">Joguinho</h3>
+            <table class="jj">
+                <tr><h5>Insira um número</h5></tr>
+                <tr><input type="number" name="numero" id="num" required></tr>
+                <tr><button class="btn" id="enviar">Testar</button></tr>
+            </table>
+        </section>
     </article>
 </body>
+<noscript>Favor ativar o Javastcript para o funcionamento adequado do site.</noscript>
 </html>
